styled collapsible, but they are not ocmpatible to be next to eachother yet

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
 	background: var(--background);
+	font-family: 'Roboto', sans-serif;
+	max-width: 1440px;
+	margin: 0 auto;
 }
-
