--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,4 +5,29 @@ body {
 	font-family: 'Roboto', sans-serif;
 	max-width: 1440px;
 	margin: 0 auto;
+	padding: 1rem;
+}
+
+/* Scrollbar styling for the components */
+
+.overflow-scrollbar {
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+.overflow-scrollbar::-webkit-scrollbar {
+	background-color: #c4c4c4;
+	width: 0.5rem;
+}
+
+.overflow-scrollbar::-webkit-scrollbar-thumb {
+	background-color: #2c2020;
+	border-radius: 50px;
+}
+
+.overflow-scrollbar::-webkit-scrollbar-corner {
+	background-color: #c4c4c4;
+}
+
+.overflow-scrollbar::-webkit-scrollbar-track {
+	display: none;
 }
